--- a/Hostels.html
+++ b/Hostels.html
@@ -82,7 +82,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="img">
-        <a href ="Hostel Details/stanza_living.html"><img src="stanza.webp" width="250px" height="160px">
+        <a href ="stanza_living.html"><img src="stanza.webp" width="250px" height="160px">
         <h1>Stanza hostel</h1>
         </a>
       </div>
