--- a/Hostels.html
+++ b/Hostels.html
@@ -89,21 +89,21 @@
     </div>
     <div class="col-md-4">
       <div class="img">
-      <a href="Hostel Details/Happy_Homes.html"><img src="tulips.jpg" width="250px" height="160px">
+      <a href="Happy_Homes.html"><img src="tulips.jpg" width="250px" height="160px">
         <h1>Happy homes</h1>
       </a> 
       </div>
     </div>
     <div class="col-md-4">
       <div class="img">
-      <a href="Hostel Details/Jury's.html"><img src="jurys.avif" width="250px" height="160px">
+      <a href="Jury's.html"><img src="jurys.avif" width="250px" height="160px">
         <h1>Jurys</h1>
       </a>
       </div>
     </div>
     <div class="col-md-4">
       <div class="img">
-      <a href="Hostel Details/Tulips.html"> <img src="tulip.jpg" width="250px" height="160px">
+      <a href="Tulips.html"> <img src="tulip.jpg" width="250px" height="160px">
         <h1>Tulips</h1>
       </a> 
       </div>
@@ -111,266 +111,266 @@
   
   <div class="col-md-4">
   <div class="img">
-    <a href="Hostel Details/cozy_living.html"><img src="Cozy colive.jpeg" width="250px" height="160px">
+    <a href="cozy_living.html"><img src="Cozy colive.jpeg" width="250px" height="160px">
     <h1>Cozy colive</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Nexin_colive.html"><img src="Nexin colive.jpg" width="250px" height="160px">
+  <a href="Nexin_colive.html"><img src="Nexin colive.jpg" width="250px" height="160px">
   <h1>Nexin colive</h1>
  </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/SYAMALA CO-LIVING and Women's PG.html"> <img src="shymala.jpeg" width="250px" height="160px">
+  <a href="SYAMALA CO-LIVING and Women's PG.html"> <img src="shymala.jpeg" width="250px" height="160px">
   <h1>SYAMALA CO-LIVING and Women's PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Vibha's Executive Women's PG.html"><img src="vibha.jpeg" width="250px" height="160px">
+  <a href="Vibha's Executive Women's PG.html"><img src="vibha.jpeg" width="250px" height="160px">
   <h1>Vibha's Executive Women's PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/ASIAN LIVING PREMIUM STUDIO ROOMS.html"><img src="Asian.jpeg" width="250px" height="160px">
+  <a href="ASIAN LIVING PREMIUM STUDIO ROOMS.html"><img src="Asian.jpeg" width="250px" height="160px">
   <h1>ASIAN LIVING PREMIUM STUDIO ROOMS</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Sri Laxmi Balaji guest inn and PG for Women.html"><img src="Balaji.jpeg" width="250px" height="160px">
+  <a href="Sri Laxmi Balaji guest inn and PG for Women.html"><img src="Balaji.jpeg" width="250px" height="160px">
   <h1>Sri Laxmi Balaji guest inn and PG for Women</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Techies Elite Coliving PG.html"><img src="Techies.jpeg" width="250px" height="160px">
+  <a href="Techies Elite Coliving PG.html"><img src="Techies.jpeg" width="250px" height="160px">
   <h1>Techies Elite Coliving PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/SHRESTA MEN'S AND WOMEN'S PG AND HOSTEL.html"><img src="shresta.jpeg" width="250px" height="160px">
+  <a href="SHRESTA MEN'S AND WOMEN'S PG AND HOSTEL.html"><img src="shresta.jpeg" width="250px" height="160px">
   <h1>SHRESTA MEN'S AND WOMEN'S PG AND HOSTEL</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Unique Women's PG.html"><img src="unique.jpg" width="250px" height="160px">
+  <a href="Unique Women's PG.html"><img src="unique.jpg" width="250px" height="160px">
   <h1>Unique Women's PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Sugathi Hometel PG For Women.html"><img src="sugathi.jpeg" width="250px" height="160px">
+  <a href="Sugathi Hometel PG For Women.html"><img src="sugathi.jpeg" width="250px" height="160px">
   <h1>Sugathi Hometel PG For Women</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/SVR GRAND PG FOR WOMENS.html"><img src="svr.jpeg" width="250px" height="160px">
+  <a href="SVR GRAND PG FOR WOMENS.html"><img src="svr.jpeg" width="250px" height="160px">
   <h1>SVR GRAND PG FOR WOMENS</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/P.R Grand Mens PG And Guest House.html"><img src="pr.jpg" width="250px" height="160px">
+  <a href="P.R Grand Mens PG And Guest House.html"><img src="pr.jpg" width="250px" height="160px">
   <h1>P.R Grand Mens PG And Guest House</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Green homes Coliving - Elite.html"><img src="green.jpg" width="250px" height="160px">
+  <a href="Green homes Coliving - Elite.html"><img src="green.jpg" width="250px" height="160px">
   <h1>Green homes Coliving - Elite</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/AADHYA Spacious Women's PG.html"><img src="Aadhya.jpg" width="250px" height="160px">
+  <a href="AADHYA Spacious Women's PG.html"><img src="Aadhya.jpg" width="250px" height="160px">
   <h1>AADHYA Spacious Women's PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/LMS LUXURY COLIVING SPACES.html"><img src="lms.jpeg" width="250px" height="160px">
+  <a href="LMS LUXURY COLIVING SPACES.html"><img src="lms.jpeg" width="250px" height="160px">
   <h1>LMS LUXURY COLIVING SPACES</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/The Canopus Co-Living by Stanar.html"><img src="canopus.jpg" width="250px" height="160px">
+  <a href="The Canopus Co-Living by Stanar.html"><img src="canopus.jpg" width="250px" height="160px">
   <h1>The Canopus Co-Living by Stanar</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/RAJIS COLIVING MENS AND WOMENS PG.html"><img src="Rajis.jpeg" width="250px" height="160px">
+  <a href="RAJIS COLIVING MENS AND WOMENS PG.html"><img src="Rajis.jpeg" width="250px" height="160px">
   <h1>RAJIS COLIVING MENS AND WOMENS PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Lakshmi pranayas.html"><img src="Laxmi.jpeg" width="250px" height="160px">
+  <a href="Lakshmi pranayas.html"><img src="Laxmi.jpeg" width="250px" height="160px">
   <h1>Lakshmi pranayas</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/ASHOK REDDY PG FOR MEN.html"><img src="ashok.jpg" width="250px" height="160px">
+  <a href="ASHOK REDDY PG FOR MEN.html"><img src="ashok.jpg" width="250px" height="160px">
   <h1>ASHOK REDDY PG FOR MEN</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/HelloWorld Techview.html"><img src="nova.avif" width="250px" height="160px">
+  <a href="HelloWorld Techview.html"><img src="nova.avif" width="250px" height="160px">
   <h1>Helloworld Techview</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/RRR Coliving and Guest Rooms.html"><img src="rrr.jpeg" width="250px" height="160px">
+  <a href="RRR Coliving and Guest Rooms.html"><img src="rrr.jpeg" width="250px" height="160px">
   <h1>RRR Coliving and Guest Rooms</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Serene Luxury Stay.html"><img src="screne.jpeg" width="250px" height="160px">
+  <a href="Serene Luxury Stay.html"><img src="screne.jpeg" width="250px" height="160px">
   <h1>Serene Luxury Stay</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/VIGNESWARA WOMENS LUXURY PG.html"><img src="vign.jpeg" width="250px" height="160px">
+  <a href="VIGNESWARA WOMENS LUXURY PG.html"><img src="vign.jpeg" width="250px" height="160px">
   <h1>VIGNESWARA WOMENS LUXURY PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/SVS Comforts Co-Live Accommodation.html"><img src="svs.jpeg" width="250px" height="160px">
+  <a href="SVS Comforts Co-Live Accommodation.html"><img src="svs.jpeg" width="250px" height="160px">
   <h1>SVS Comforts Co-Live Accommodation</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/ROYAL LUXURY MENS HOSTEL.html"><img src="royal.jpeg" width="250px" height="160px">
+  <a href="ROYAL LUXURY MENS HOSTEL.html"><img src="royal.jpeg" width="250px" height="160px">
   <h1>SVS ROYAL LUXURY MENS HOSTEL</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/SRI MONISH WOMENS PG.html"><img src="monish.jpeg" width="250px" height="160px">
+  <a href="SRI MONISH WOMENS PG.html"><img src="monish.jpeg" width="250px" height="160px">
   <h1>SRI MONISH WOMENS PG AND HOSTEL</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/Anjali women paying guest accommodation.html"><img src="Anjali.jpeg" width="250px" height="160px">
+  <a href="Anjali women paying guest accommodation.html"><img src="Anjali.jpeg" width="250px" height="160px">
   <h1>Anjali women paying guest accommodation</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-  <a href="Hostel Details/KPR Co-Living And Men's PG.html"><img src="kpr.jpg" width="250px" height="160px">
+  <a href="KPR Co-Living And Men's PG.html"><img src="kpr.jpg" width="250px" height="160px">
   <h1>KPR Co-Living And Men's PG</h1>
   </a>
   </div>
   </div>
   <div class="col-md-4">
   <div class="img">
-    <a href="Hostel Details/Dhanvi Executive Women's Hostel PG.html"><img src="dhanvi.jpg" width="250px" height="160px">
+    <a href="Dhanvi Executive Women's Hostel PG.html"><img src="dhanvi.jpg" width="250px" height="160px">
     <h1>Dhanvi Executive Women's Hostel PG</h1>
     </a>
     </div>
     </div>
     <div class="col-md-4">
   <div class="img">
-    <a href="Hostel Details/Sasya Elite Co-Living.html"><img src="sasya.jpeg" width="250px" height="160px">
+    <a href="Sasya Elite Co-Living.html"><img src="sasya.jpeg" width="250px" height="160px">
     <h1>Sasya Elite Co-Living</h1>
     </a>
     </div>
     </div>
     <div class="col-md-4">
     <div class="img">
-      <a href="Hostel Details/AG Co-Living Spaces Paying Guest.html"><img src="ag.jpg" width="250px" height="160px">
+      <a href="AG Co-Living Spaces Paying Guest.html"><img src="ag.jpg" width="250px" height="160px">
       <h1>AG Co-Living Spaces Paying Guest</h1>
       </a>
       </div>
       </div>
       <div class="col-md-4">
       <div class="img">
-       <a href="Hostel Details/Krishna Kripa Residency.html"><img src="krishna.jpeg" width="250px" height="160px">
+       <a href="Krishna Kripa Residency.html"><img src="krishna.jpeg" width="250px" height="160px">
         <h1>Krishna Kripa Residency</h1>
        </a>
         </div>
         </div>
         <div class="col-md-4">
         <div class="img">
-         <a href="Hostel Details/Lakshmi Boys Hostel.html"><img src="lakshmi.jpg" width="250px" height="160px">
+         <a href="Lakshmi Boys Hostel.html"><img src="lakshmi.jpg" width="250px" height="160px">
           <h1>Lakshmi Boys Hostel</h1>
          </a>
           </div>
           </div>
           <div class="col-md-4">
           <div class="img">
-          <a href="Hostel Details/Hivee inn Coliving.html"><img src="Hivee.jpg" width="250px" height="160px">
+          <a href="Hivee inn Coliving.html"><img src="Hivee.jpg" width="250px" height="160px">
             <h1>Hivee inn Coliving</h1>
           </a>
             </div>
             </div>
             <div class="col-md-4">
             <div class="img">
-             <a href="Hostel Details/Surya Luxury Men's Hostel.html"><img src="surya.jpg" width="250px" height="160px">
+             <a href="Surya Luxury Men's Hostel.html"><img src="surya.jpg" width="250px" height="160px">
               <h1>Surya Luxury Men's Hostel</h1>
              </a>
               </div>
               </div>
               <div class="col-md-4">
               <div class="img">
-               <a href="Hostel Details/Radhe Colive.html"><img src="radhe.jpg" width="250px" height="160px">
+               <a href="Radhe Colive.html"><img src="radhe.jpg" width="250px" height="160px">
                 <h1>Radhe Colive</h1>
                </a>
                 </div>
                 </div>
                 <div class="col-md-4">
                 <div class="img">
-                 <a href="Hostel Details/Aditya Residency"><img src="aditya.jpg" width="250px" height="160px">
+                 <a href="Aditya Residency"><img src="aditya.jpg" width="250px" height="160px">
                   <h1>ADITYA RESIDENCY Paying Guest/Hostels</h1>
                  </a>
                   </div>
                   </div>
                   <div class="col-md-4">
                     <div class="img">
-                    <a href="Hostel Details/Vamshi men's luxury pg accommodation.html"><img src="vamshi.jpg" width="250px" height="160px">
+                    <a href="Vamshi men's luxury pg accommodation.html"><img src="vamshi.jpg" width="250px" height="160px">
                       <h1>Vamshi men's luxury pg accommodation</h1>
                     </a>
                       </div>
